@@ -16,5 +16,5 @@
 #
 
 
-JAVA_OPTS="-XX:+UseZGC -server -Xms700m -Xmx700m -Xlog:gc"
+JAVA_OPTS="-XX:+UseZGC -server -Xms700m -Xmx700m"
 time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_criccomini
